src/test/ui/proc-macro/invalid-punct-ident-4.stderr
error: unexpected closing delimiter: `)`
  --> $DIR/invalid-punct-ident-4.rs:8:1
   |
LL | lexer_failure!();
   | ^^^^^^^^^^^^^^^^^ unexpected closing delimiter
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
  --> $DIR/invalid-punct-ident-4.rs:8:1
   |
LL | lexer_failure!();
   | ^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `invalid_punct_ident_4`
  --> $DIR/invalid-punct-ident-4.rs:5:1
   |
LL | / #[macro_use]
LL | | extern crate invalid_punct_ident;
LL | |
LL | | lexer_failure!();
   | |_________________^ consider adding a `main` function to `$DIR/invalid-punct-ident-4.rs`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0601`.
